(feat) adds inputrc

--- a/zsh/.inputrc
+++ b/zsh/.inputrc
@@ -1,14 +1,6 @@
 #$include /etc/inputrc
 #"\C-p":history-search-backward
 #"\C-n":history-search-forward
-
-set colored-stats On
-set completion-ignore-case On
-set completion-prefix-display-length 3
-set mark-symlinked-directories On
-set show-all-if-ambiguous On
-set show-all-if-unmodified On
-set visible-stats On
 bindkey -M viins 'kk' vi-cmd-mode
 bindkey -M viins 'jj' vi-cmd-mode
 # For History searching
@@ -42,10 +34,12 @@ set editing-mode vi
 # Fix backspace bug when switching modes
 bindkey "^?" backward-delete-char
 
-set show-mode-in-prompt on
-set vi-cmd-mode-string "\1\e[1 q\2"
-set vi-ins-mode-string "\1\e[5 q\2"
 
+#bind to tab
+bindkey '^I' expand-or-complete-or-list-files
+bindkey -v
+
+bindkey '^[OM' auto-suggest-execute 
 # Use vim keys in tab complete menu:
 bindkey -M menuselect 'h' vi-backward-char
 bindkey -M menuselect 'j' vi-down-line-or-history
