--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,15 +6,18 @@
 # 
 # # use vim hotkeys in view / copy mode (enter with "ctrl+b [")
 # set -g mode-keys vi
-set -ga terminal-overrides ",xterm-256color*:Tc"
+# set -ga terminal-overrides ",xterm-256color*:Tc"
 # set -g default-terminal "xterm-256color"
+ set -g default-terminal "tmux-256color"
+ set -ga terminal-overrides ",*256col*:Tc"
+# easy reload config
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
-bind-key r source-file ~/.tmux.conf
 set -g base-index 1
 
 set-window-option -g mode-keys vi
@@ -27,16 +30,16 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/dotfiles/todo.md"
+bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 
 bind-key -r G run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/work/nrdp"
 bind-key -r C run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/work/tvui"
+bind-key -r H run-shell "~/.local/bin/tmux-sessionizer /home/digitaldive/.dotfiles"
 bind-key -r R run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/work/milo"
-bind-key -r H run-shell "~/.dotfiles"
 bind-key -r T run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/personal/harpoon"
 bind-key -r N run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/personal/vim-wr"
 bind-key -r S run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/personal/kl"
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D 
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+# bind -n M-h select-pane -L
+# bind -n M-j select-pane -D 
+# bind -n M-k select-pane -U
+# bind -n M-l select-pane -R
