--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,25 +21,24 @@ set -g status-style 'bg=#333333 fg=#5eacd3'
 set -g base-index 1
 
 set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
+# bind -T copy-mode-vi v send-keys -X begin-selection
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 # vim-like pane switching
 bind -r ^ last-window
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
-
-bind-key -r G run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/work/nrdp"
-bind-key -r C run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/work/tvui"
-bind-key -r H run-shell "~/.local/bin/tmux-sessionizer /home/digitaldive/.dotfiles"
-bind-key -r R run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/work/milo"
-bind-key -r T run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/personal/harpoon"
-bind-key -r N run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/personal/vim-wr"
-bind-key -r S run-shell "~/dotfiles/awesome-streamerrc/ThePrimeagen/tmux2 /home/theprimeagen/personal/kl"
+bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
+bind D send-keys '~/.local/bin/tmux-sessionizer ~/.dotfiles' Enter 
+bind k send-keys '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' Enter 
 # bind -n M-h select-pane -L
 # bind -n M-j select-pane -D 
 # bind -n M-k select-pane -U
 # bind -n M-l select-pane -R
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'Morantron/tmux-fingers'
+
+run '~/.tmux/plugins/tpm/tpm'
