(feat) adds thumbs for fingers

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,11 +5,22 @@
 # set -g default-terminal "screen-256color"
 # 
 # # use vim hotkeys in view / copy mode (enter with "ctrl+b [")
-# set -g mode-keys vi
+set -g mode-keys vi
+# Tmux Copy and paste https://unix.stackexchange.com/questions/131011/use-system-clipboard-in-vi-copy-mode-in-tmux 
+setw -g mode-keys vi
+set-option -s set-clipboard off
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+set -g mouse on
 # set -ga terminal-overrides ",xterm-256color*:Tc"
+
 # set -g default-terminal "xterm-256color"
- set -g default-terminal "tmux-256color"
- set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 # easy reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
@@ -36,9 +47,12 @@ bind k send-keys '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' Enter
 # bind -n M-j select-pane -D 
 # bind -n M-k select-pane -U
 # bind -n M-l select-pane -R
+set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'Morantron/tmux-fingers'
+# set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @thumbs-key F
 
 run '~/.tmux/plugins/tpm/tpm'
