(feat) A good place

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+bind-key C-a send prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 set -g base-index 1
@@ -41,14 +41,14 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
-bind D send-keys '~/.local/bin/tmux-sessionizer ~/.dotfiles' Enter 
-bind k send-keys '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' Enter 
+bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles' 
+bind k run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' 
 # bind -n M-h select-pane -L
 # bind -n M-j select-pane -D 
 # bind -n M-k select-pane -U
 # bind -n M-l select-pane -R
-set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 
+set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'Morantron/tmux-fingers'
