(feat) working cursor!!

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,3 +56,5 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @thumbs-key F
 
 run '~/.tmux/plugins/tpm/tpm'
+if '[ ! -z "$WT_SESSION" ]' 'set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[0 q\\E[?12l"'
+
