(feat) cheatshee.sh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,7 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 # easy reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
+bind-key -r i run-shell "tmux neww tmux-cht.sh"
 
 unbind C-b
 set-option -g prefix C-a
