(fix) adds tmux main session

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,6 +44,7 @@ bind -r l select-pane -R
 bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles' 
 bind k run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' 
+bind m run-shell 'tmux switch-client -t main'  
 # bind -n M-h select-pane -L
 # bind -n M-j select-pane -D 
 # bind -n M-k select-pane -U
