(feat) tmux copy and paste vimode with y

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,62 +1,51 @@
 # e bash
 # set -g default-command "/bin/dw"
 # 
-# # enable colors
-# set -g default-terminal "screen-256color"
 # 
 # # use vim hotkeys in view / copy mode (enter with "ctrl+b [")
+unbind C-b
 set -g mode-keys vi
 # Tmux Copy and paste https://unix.stackexchange.com/questions/131011/use-system-clipboard-in-vi-copy-mode-in-tmux 
 setw -g mode-keys vi
+set-window-option -g mode-keys vi
 set-option -s set-clipboard off
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind P paste-buffer
+bind -T copy-mode  C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
+bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 set -g mouse on
-# set -ga terminal-overrides ",xterm-256color*:Tc"
 
-# set -g default-terminal "xterm-256color"
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 # easy reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
+bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
 
-unbind C-b
 set-option -g prefix C-a
 bind-key C-a send prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 set -g base-index 1
 
-set-window-option -g mode-keys vi
-# bind -T copy-mode-vi v send-keys -X begin-selection
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 # vim-like pane switching
 bind -r ^ last-window
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
 bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles' 
 bind k run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' 
 bind m run-shell 'tmux switch-client -t main'  
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D 
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
 
 set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @thumbs-key F
-
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 run '~/.tmux/plugins/tpm/tpm'
 if '[ ! -z "$WT_SESSION" ]' 'set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[0 q\\E[?12l"'
 
