--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,7 @@ bind P paste-buffer
 bind -T copy-mode  C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 set -g mouse on
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
@@ -29,6 +30,7 @@ set -g base-index 1
 
 # vim-like pane switching
 bind -r ^ last-window
+bind-key C-a last-window
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
@@ -48,4 +50,5 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 run '~/.tmux/plugins/tpm/tpm'
 if '[ ! -z "$WT_SESSION" ]' 'set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[0 q\\E[?12l"'
-bind-key C-a last-window
+bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
+bind-key y respawn-window
