(feat) updates tmux.conf and better prev win/session

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,20 +27,22 @@ bind-key C-a send prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 set -g base-index 1
-
 # vim-like pane switching
-bind -r ^ last-window
-bind-key C-a last-window
+bind-key C-a switch-client -l
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+# previous session
+bind ^ last-window
 bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles' 
 bind k run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' 
 bind m run-shell 'tmux switch-client -t main'  
 
+bind g run-shell '~/.local/bin/tmux-sessionizer ~/work/galley/devops/terraform/EKS' 
+# plugins
 set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -48,7 +50,22 @@ set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @thumbs-key F
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'mikejoh/tmux-k8s'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g status-right "#(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux)"
+#set -g status-right "#(/bin/bash $HOME/.tmux/plugins/kube-tmux/kube.tmux 5 red cyan)"
+# set -g @plugin 'raba-jp/tmux-kubernetes'
+# set -g @plugin 'raba-jp/tmux-kubernetes'
+# set -g @plugin 'mikejoh/tmux-k8s'
+# set -g status-right "#(/bin/bash $HOME/.tmux/aws-tmux/aws.tmux)"
+# set -g status-right '#{k8s_status} %a %Y-%m-%d %H:%M'
 if '[ ! -z "$WT_SESSION" ]' 'set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[0 q\\E[?12l"'
 bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
 bind-key y respawn-window
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
