--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -124,5 +124,26 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 if '[ ! -z "$WT_SESSION" ]' 'set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[0 q\\E[?12l"'
 bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
 bind-key y respawn-window
+# set -g status-left "#{?client_prefix,#[bg=colour2],#[bg=colour1]}#[fg=colour0] #S "
+
+set -g status-justify "centre"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=#ddc7a1,bg=#504945"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=#a89984"
+set -g status-style "none,bg=#32302f"
+set -g message-style "fg=#ddc7a1,bg=#504945"
+set -g pane-border-style "fg=#504945"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none,fg=#a89984,bg=#32302f"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=#ddc7a1,bg=#32302f"
+set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %R #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
+set -g status-right "#(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux) #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #[fg=blue]#{download_speed}  #{sysstat_cpu} #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %a #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#282828,bg=#a89984,bold] #H #{prefix_highlight} "
+setw -g window-status-format "#[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#32302f,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #I  #W  #F #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]"
+# set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %R #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
