--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -141,7 +141,8 @@ setw -g window-status-activity-style "none,fg=#a89984,bg=#32302f"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#ddc7a1,bg=#32302f"
 set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %R #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
-set -g status-right "#(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux) #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #[fg=blue]#{download_speed}  #{sysstat_cpu} #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %a #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#282828,bg=#a89984,bold] #H #{prefix_highlight} "
+#(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux) 
+set -g status-right " #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #[fg=blue]#{download_speed}  #{sysstat_cpu} #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %a #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#282828,bg=#a89984,bold] #H #{prefix_highlight} "
 setw -g window-status-format "#[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#32302f,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #I  #W  #F #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]"
 # set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %R #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
