--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -145,6 +145,13 @@ set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a8
 set -g status-right " #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #[fg=blue]#{download_speed}  #{sysstat_cpu} #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics] #[fg=#ddc7a1,bg=#504945] %a #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics] #[fg=#282828,bg=#a89984,bold] #H #{prefix_highlight} "
 setw -g window-status-format "#[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#32302f,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #I  #W  #F #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]"
+
+# Adds another prompt row. https://www.reddit.com/r/tmux/comments/rascjp/adding_space_between_tmux_status_bar_and_prompt/
+# This takes advantage of the multi-status bar support in tmux >= 2.9. It creates two status bars making the second your actual status bar and the first one a blank one to emulate white space
+# From https://github.com/tmux/tmux/issues/1886#issuecomment-525382148
+set -Fg 'status-format[1]' '#{status-format[0]}'
+set -g 'status-format[0]' ''
+set -g status 2
 # set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %R #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
