--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,11 @@
 # e bash
 # set -g default-command "/bin/dw"
-# 
-# 
+#
+#
 # # use vim hotkeys in view / copy mode (enter with "ctrl+b [")
 unbind C-b
 set -g mode-keys vi
-# Tmux Copy and paste https://unix.stackexchange.com/questions/131011/use-system-clipboard-in-vi-copy-mode-in-tmux 
+# Tmux Copy and paste https://unix.stackexchange.com/questions/131011/use-system-clipboard-in-vi-copy-mode-in-tmux
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
 set-option -s set-clipboard off
@@ -37,11 +37,11 @@ bind -r l select-pane -R
 # previous session
 bind ^ last-window
 bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
-bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles' 
-bind k run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk' 
-bind m run-shell 'tmux switch-client -t main'  
+bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles'
+bind k run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk '
+bind m run-shell 'tmux switch-client -t main'
 
-bind g run-shell '~/.local/bin/tmux-sessionizer ~/work/galley/devops/terraform/EKS' 
+bind g run-shell '~/.local/bin/tmux-sessionizer ~/work/galley/devops/terraform/EKS'
 # plugins
 set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 set -g @plugin 'tmux-plugins/tpm'
@@ -140,11 +140,14 @@ set -g status-left-length "100"
 setw -g window-status-activity-style "none,fg=#a89984,bg=#32302f"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#ddc7a1,bg=#32302f"
-set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] %R #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
-#(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux) 
-set -g status-right " #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #[fg=blue]#{download_speed}  #{sysstat_cpu} #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics] #[fg=#ddc7a1,bg=#504945] %a #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics] #[fg=#282828,bg=#a89984,bold] #H #{prefix_highlight} "
+set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #(TZ=US/Pacific date  +%%I:%%M) #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
+#(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux)
+
+# set -g status-right "#[fg=white]#S #I:#P  #(TZ=US/Pacific date  +%%H:%%M:%%a)"
+# set -g status-right set -g status-right "#( TZ=':US/Pacific' date '+%Z %%H:%%M:%%S ')"
+set -g status-right " #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #[fg=blue]#{download_speed}  #{sysstat_cpu} #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics] #[fg=#ddc7a1,bg=#504945] %a %m/%d #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics] #[fg=#282828,bg=#a89984,bold] #H #{prefix_highlight} "
 setw -g window-status-format "#[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#32302f,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #I  #W  #F #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]"
+ setw -g window-status-current-format "#[fg=#32302f,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #I  #W  #F #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]"
 
 # Adds another prompt row. https://www.reddit.com/r/tmux/comments/rascjp/adding_space_between_tmux_status_bar_and_prompt/
 # This takes advantage of the multi-status bar support in tmux >= 2.9. It creates two status bars making the second your actual status bar and the first one a blank one to emulate white space
