(fix:nvim) adds luac to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ tags.lock
 tags.temp
 nvim/.config/nvim/plugin/packer_compiled.lua
 nvim/.config/nvim/plugin/packer_compiled.vim
+nvim/.config/nvim/lua/.luarc.json
