(feat:tmux) timeout change

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,8 @@
 # # use vim hotkeys in view / copy mode (enter with "ctrl+b [")
 unbind C-b
 set -g mode-keys vi
+set -s escape-time 0
+
 # Tmux Copy and paste https://unix.stackexchange.com/questions/131011/use-system-clipboard-in-vi-copy-mode-in-tmux
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
