(feat:tmux) clean up add ctrl-j

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,39 +4,43 @@
 #
 # # use vim hotkeys in view / copy mode (enter with "ctrl+b [")
 unbind C-b
+unbind -T copy-mode-vi Enter
 set -g mode-keys vi
 set -s escape-time 0
 
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 # Tmux Copy and paste https://unix.stackexchange.com/questions/131011/use-system-clipboard-in-vi-copy-mode-in-tmux
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
 set-option -s set-clipboard off
-unbind -T copy-mode-vi Enter
 bind P paste-buffer
 bind -T copy-mode  C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 set -g mouse on
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+bind-key C-j previous-window
+bind-key C-k next-window
+set-option -g prefix C-a
 # easy reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
 
-set-option -g prefix C-a
+bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
+bind-key y respawn-window
 bind-key C-a send prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 set -g base-index 1
-# vim-like pane switching
+# last session
 bind-key C-a switch-client -l
 bind -r k select-pane -U
+# vim-like pane switching
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-# previous session
+# previous window
 bind ^ last-window
 bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles'
@@ -124,8 +128,6 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 # set -g status-right "#(/bin/bash $HOME/.tmux/aws-tmux/aws.tmux)"
 # set -g status-right '#{k8s_status} %a %Y-%m-%d %H:%M'
 if '[ ! -z "$WT_SESSION" ]' 'set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[0 q\\E[?12l"'
-bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
-bind-key y respawn-window
 # set -g status-left "#{?client_prefix,#[bg=colour2],#[bg=colour1]}#[fg=colour0] #S "
 
 set -g status-justify "centre"
@@ -136,13 +138,13 @@ set -g status-right-style "none"
 set -g pane-active-border-style "fg=#a89984"
 set -g status-style "none,bg=#32302f"
 set -g message-style "fg=#ddc7a1,bg=#504945"
-set -g pane-border-style "fg=#504945"
+set -g pane-border-style "fg=#504950"
 set -g status-right-length "100"
 set -g status-left-length "100"
 setw -g window-status-activity-style "none,fg=#a89984,bg=#32302f"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#ddc7a1,bg=#32302f"
-set -g status-left "#{prefix_highlight}#[fg=#282828,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #(TZ=US/Pacific date  +%%I:%%M) #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
+set -g status-left "#{prefix_highlight}#[fg=#282829,bg=#a89984,bold] #S #[fg=#a89984,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#504945] #(TZ=US/Pacific date  +%%I:%%M) #[fg=#504945,bg=#32302f,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#32302f] #{sysstat_mem} #[fg=blue]祝#{upload_speed} #[fg=#32302f,bg=#32302f,nobold,nounderscore,noitalics]"
 #(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux)
 
 # set -g status-right "#[fg=white]#S #I:#P  #(TZ=US/Pacific date  +%%H:%%M:%%a)"
