--- a/zsh/.inputrc
+++ b/zsh/.inputrc
@@ -1,6 +1,3 @@
-# esc insert mode with jj or kk
-bindkey -M viins 'kk' vi-cmd-mode
-bindkey -M viins 'jj' vi-cmd-mode
 # ctrl-space accept next word in autosuggestion
 bindkey '^@' forward-word
 
@@ -72,4 +69,4 @@ bindkey -M visual ys add-surround
 
 bindkey -M vicmd '^[' undefined-key
 bindkey -rM viins '^X'
-bindkey -M visual i <Esc>
+# bindkey -M visual '^c' deactivate-region
