(fix:tmux) fix tmux keys Ctrl-i,k,j

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,14 +19,14 @@ bind -T copy-mode  C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 bind -T copy-mode-vi C-c send -X copy-pipe-no-clear "xsel -i --clipboard"
 set -g mouse on
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key C-j previous-window
-bind-key C-k next-window
+bind-key -r C-j previous-window
+bind-key -r C-k next-window
 set-option -g prefix C-a
 # easy reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
 
-bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
+# bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
 bind-key y respawn-window
 bind-key C-a send prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
@@ -44,7 +44,7 @@ bind -r l select-pane -R
 bind ^ last-window
 bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles'
-bind k run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk '
+bind K run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk '
 bind m run-shell 'tmux switch-client -t main'
 
 bind g run-shell '~/.local/bin/tmux-sessionizer ~/work/galley/devops/terraform/EKS'
