(WIP:tmux) cattpuccino

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,6 +51,8 @@ bind g run-shell '~/.local/bin/tmux-sessionizer ~/work/galley/devops/terraform/E
 # plugins
 set -g @thumbs-command 'echo -n {} | xclip -sel clip'
 set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'catppuccin/tmux'
+# set -g @catppuccin_flavour 'mocha'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @thumbs-key F
@@ -64,6 +66,7 @@ set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'sainnhe/tmux-fzf'
 # set -g status-right "#(/bin/bash $HOME/.tmux/plugins/aws-tmux/aws.tmux)"
 set -g @plugin 'tmux-plugins/tmux-cpu'
+
 # set -g @plugin 'o0th/tmux-nova'
 # set -g @nova-nerdfonts true
 # set -g @nova-nerdfonts-left 
