--- a/zsh/.inputrc
+++ b/zsh/.inputrc
@@ -1,77 +1,77 @@
-# ctrl-space accept next word in autosuggestion
-bindkey '^@' forward-word
-
-# For History searching
-bindkey "^R" history-incremental-search-backward
-bindkey "\e[A" history-beginning-search-backward
-bindkey "\e[B" history-beginning-search-forward
-bindkey -r '^R'
-bindkey -r '^S'
-bindkey -r '^J'
-
-# Vi Mode
-set editing-mode vi
-
-# Fix backspace bug when switching modes
-bindkey "^?" backward-delete-char
-
-bindkey -v
-
-#binds ctrl-enter
-bindkey ^J autosuggest-execute
-
-# # Use vim keys in tab complete menu:
-# bindkey -M menuselect 'h' vi-backward-char
-# bindkey -M menuselect 'j' vi-down-line-or-history
-# bindkey -M menuselect 'k' vi-up-line-or-history
-# bindkey -M menuselect 'l' vi-forward-char
-# bindkey -M menuselect 'left' vi-backward-char
-# bindkey -M menuselect 'down' vi-down-line-or-history
-# bindkey -M menuselect 'up' vi-up-line-or-history
-# bindkey -M menuselect 'right' vi-forward-char
-
-prevDir(){
-  cd -
-  zle accept-line
-}
-
-zle -N prevDir
-bindkey '^^' prevDir
-
-cheat_sheet(){
-  ~/.local/bin/tmux-cht.sh;
-}
-zle -N cheat_sheet
-
-# ctrl + / opens cheatsheet
-# bindkey -a '^_' cheat_sheet
-bindkey -s '^_' '~/.local/bin/tmux-cht.sh^M'
-
-# ctr-e open command in vim
-bindkey '^e' edit-command-line
-bindkey -a '^e' edit-command-line
-
-
-# adds Y yank to end of line
-bindkey -a -s 'Y' 'y$'
-# ZVM_VI_INSERT_ESCAPE_BINDKEY='kk'
-
-autoload -Uz surround
-zle -N delete-surround surround
-zle -N change-surround surround
-zle -N add-surround surround
-
-bindkey -a cs change-surround
-bindkey -a ds delete-surround
-bindkey -a ys add-surround
-bindkey -M visual ys add-surround
-
-bindkey -M vicmd '^[' undefined-key
-
-# REMOVES KEYS
-bindkey -rM viins '^X'
-# bindkey -r viins '^j'
-# bindkey -M visual '^c' deactivate-region
-# bind home and end key  WIP
-bindkey '^[[H' beginning-of-line
-bindkey '^[[F' end-of-line
+# # ctrl-space accept next word in autosuggestion
+# bindkey '^@' forward-word
+#
+# # For History searching
+# bindkey "^R" history-incremental-search-backward
+# bindkey "\e[A" history-beginning-search-backward
+# bindkey "\e[B" history-beginning-search-forward
+# bindkey -r '^R'
+# bindkey -r '^S'
+# bindkey -r '^J'
+#
+# # Vi Mode
+# set editing-mode vi
+#
+# # Fix backspace bug when switching modes
+# bindkey "^?" backward-delete-char
+#
+# bindkey -v
+#
+# #binds ctrl-enter
+# bindkey ^J autosuggest-execute
+#
+# # # Use vim keys in tab complete menu:
+# # bindkey -M menuselect 'h' vi-backward-char
+# # bindkey -M menuselect 'j' vi-down-line-or-history
+# # bindkey -M menuselect 'k' vi-up-line-or-history
+# # bindkey -M menuselect 'l' vi-forward-char
+# # bindkey -M menuselect 'left' vi-backward-char
+# # bindkey -M menuselect 'down' vi-down-line-or-history
+# # bindkey -M menuselect 'up' vi-up-line-or-history
+# # bindkey -M menuselect 'right' vi-forward-char
+#
+# prevDir(){
+#   cd -
+#   zle accept-line
+# }
+#
+# zle -N prevDir
+# bindkey '^^' prevDir
+#
+# cheat_sheet(){
+#   ~/.local/bin/tmux-cht.sh;
+# }
+# zle -N cheat_sheet
+#
+# # ctrl + / opens cheatsheet
+# # bindkey -a '^_' cheat_sheet
+# bindkey -s '^_' '~/.local/bin/tmux-cht.sh^M'
+#
+# # ctr-e open command in vim
+# bindkey '^e' edit-command-line
+# bindkey -a '^e' edit-command-line
+#
+#
+# # adds Y yank to end of line
+# bindkey -a -s 'Y' 'y$'
+# # ZVM_VI_INSERT_ESCAPE_BINDKEY='kk'
+#
+# autoload -Uz surround
+# zle -N delete-surround surround
+# zle -N change-surround surround
+# zle -N add-surround surround
+#
+# bindkey -a cs change-surround
+# bindkey -a ds delete-surround
+# bindkey -a ys add-surround
+# bindkey -M visual ys add-surround
+#
+# bindkey -M vicmd '^[' undefined-key
+#
+# # REMOVES KEYS
+# bindkey -rM viins '^X'
+# # bindkey -r viins '^j'
+# # bindkey -M visual '^c' deactivate-region
+# # bind home and end key  WIP
+# bindkey '^[[H' beginning-of-line
+# bindkey '^[[F' end-of-line
