(fix) lsp stable etc....

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,7 +25,6 @@ set-option -g prefix C-a
 # easy reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
-
 # bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
 bind-key y respawn-window
 bind-key C-a send prefix
@@ -46,6 +45,14 @@ bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nv
 bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles'
 bind K run-shell '~/.local/bin/tmux-sessionizer ~/projects/aws-sdk '
 bind m run-shell 'tmux switch-client -t main'
+
+# Toggle popup window with Alt-3
+# bind-key -N 'Toggle popup window' S-F1 if-shell -F '#{==:#{session_name},popup}' {
+#     detach-client
+# } {
+#     display-popup -d "#{pane_current_path}" -xC -yC -w 80% -h 75% -E 'tmux attach-session -t popup || tmux new-session -s popup'
+# }
+
 
 bind g run-shell '~/.local/bin/tmux-sessionizer ~/work/galley/devops/terraform/EKS'
 # plugins
