(feat/everything) more lazy opt

--- a/tmux/.tmux.keybind.conf
+++ b/tmux/.tmux.keybind.conf
@@ -31,15 +31,16 @@ bind -r l select-pane -R
  
 # bind -n C-x setw synchronize-panes
  # toggle status bar
-bind-key -n c-f3 set-option -g status #ctrl+f3 combo
+
 # previous window
 bind ^ last-window
 
 bind  -r C-j select-window -t 1
 bind  -r C-k select-window -t 2
 # bind -r K run tmux ls | awk 'BEGIN{FS=":"}!/attached/{print $1}' | xargs -n 1 tmux kill-ses -t
+# Killsessions
 bind -r K run-shell "tmux list-sessions | grep -v attached | awk 'BEGIN{FS=":"}{print $1}' | xargs -n 1 tmux kill-session -t "
-bind -r T neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
+bind -r o neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 bind D run-shell '~/.local/bin/tmux-sessionizer ~/.dotfiles'
 # bind K run-shell 't ~/projects/aws-sdk '
 bind m run-shell 'tmux switch-client -t main'
@@ -61,28 +62,19 @@ set -g prefix None
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-# bind -n C-a if-shell -b "is_vim" "send-keys F8 \;  switchc -Tprefix" "display hello"
-# bind -n C-a if-shell -b "$is_vim" "status on \; send-keys F8 \; run -b 'sleep 6;' switchc -Tprefix"  "display 'not nvim' \; switchc -Tpref
 
 
-
-# bind -n C-a set status on \; send-keys F8 \; run -b "sleep 6; tmux set -t'#{session_id}' status off" \; switchc -Tprefix
-
-# OG COMMand
-# bind -n C-a set status on \; run -b "sleep 1; tmux set -t'#{session_id}' status off" \; switchc -Tprefix
-# baller command
-bind-key C-a switch-client -l
+#switch-session after bindkey double press
+bind-key C-a switch-client -l \;\
+   run-shell -b -d 3 'tmux set status off'
 bind -n C-a set status on \;\
-  switch-client -T prefix \;\
-  run-shell -d 1 -b "while [ $(tmux display-message -p '##{client_prefix}') -eq 1 ]; do sleep 0.5 ; done; sleep 4.0; tmux set status off"
-set-hook -g client-focus-in 'set -g status on'
-set-hook -g client-active 'set -g status on'
-set-hook -g client-focus-out 'set -g status off'
-set-hook -g client-session-changed 'run-shell "tmux set status on && sleep 5 && tmux set status off"' 
-# set-hook -g client-session-changed 
-# set-hook -g client-focus-out 'set -g status on' 
-
-
-# bind -n C-a switchc -Tprefix
-# bind -n C-a set status on \; run -b "sleep 6; tmux set -t'#{session_id}' status off" 
-# bind-key -n C-f3 set-option -g status #ctrl+f3 combo
+   switch-client -T prefix \;\
+   # run-shell 'tmux set -g status on && sleep 5 && tmux set -g status off';
+    # run-shell -d 0.2 -b "while [ $(tmux display-message -p '##{client_prefix}') -eq 1 ]; do sleep 0.2 ; done; sleep 4.0; tmux set status off";
+# set-hook -g client-active 'set -g status on'
+  set-hook -g client-focus-in "run-shell 'tmux set -g status on && sleep 5 && tmux set -g status off '"
+# set-hook -g client-focus-out 'set -g status off'
+#
+#Ensure status is on when we lose focus
+set-hook -g client-focus-out 'set -g status on'
+bind-key -n F3 run-shell 'tmux set status'
