--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "nvim"]
+[submodule "nvim/.config/nvim"]
 	path = nvim/.config/nvim
 	url = git@github.com:phortonssf/nvim.git
+[submodule "nvim/.config/kickstart.nvim"]
+	path = nvim/.config/kickstart.nvim
+	url = git@github.com:nvim-lua/kickstart.nvim.git
