feat(graphite): test

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,7 @@ source-file ~/.tmux.options.conf
 # source-file ~/.catppuccin.conf
 
 
-# set -g status-right '#(gitmux "#{pane_current_path}")'
+# nset -g status-right '#(gitmux "#{pane_current_path}")'
 # set -ga status-left " #[fg=white,nobold]#(gitmux -cfg  /home/digitaldive/.dotfiles/tmux/gitmux.yaml)"
 
 set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
@@ -26,7 +26,7 @@ set -g @catppuccin_window_current_text "#W"
 
 set -g @catppuccin_status_connect_separator "no"
 
-# set -g @catppuccin_status_modules "example"
+# set -g @catppuccin_status_modules "exampl/e"
 set -g @catppuccin_status_modules_right "ram cpu user "
 
 set -g @catppuccin_status_modules_left "session"
@@ -42,9 +42,9 @@ set -g status off
 
 
 # T CONFIG
-set -g @t-fzf-find-binding 'ctrl-h:change-prompt( Files> )+reload(fd -H -d 4 -t d . ~ -E .git -E node_modules -E .npm )'
+# set -g @t-fzf-find-binding 'ctrl-h:change-prompt( Files> )+reload(fd -H -d 4 -t d . ~ -E .git -E node_modules -E .npm )'
 # set -g @t-fzf-default-results 'sessions' # show tmux sessions by default
-set -g @t-fzf-default-results 'zoxide' # show zoxide results by default
+# set -g @t-fzf-default-results 'zoxide' # show zoxide results by default
 
 # FZF-TMUX CONFIG
 TMUX_FZF_ORDER="session|window|pane|command|keybinding|clipboard|process"
@@ -53,7 +53,7 @@ TMUX_FZF_ORDER="session|window|pane|command|keybinding|clipboard|process"
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
-set -g @thumbs-command 'echo -n {} | clip.exe'
+# set -g @thumbs-command 'echo -n {} | clip.exe'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 # run after catppuccin
@@ -66,7 +66,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g default-shell  "/bin/bash"
 # set -g @thumbs-key F
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'fcsonline/tmux-thumbs'
+# set -g @plugin 'fcsonline/tmux-thumbs'
 run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
