--- a/tmux/.tmux.keybind.conf
+++ b/tmux/.tmux.keybind.conf
@@ -12,8 +12,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 # easy reload config
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 # bind-key -r i run-shell "tmux neww ~/.local/bin/tmux-cht.sh"
-# bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
 
+# bind -r i run-shell "tmux neww ~/.local/bin/tmux-ch.sh"
 bind-key y respawn-window
 # bind-key c-a send prefix \; display "sync #{?synchronize-panes,on,off}"
 
@@ -29,7 +29,7 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
  
-# bind -n C-x setw synchronize-panes
+ bind -n C-x setw synchronize-panes
  # toggle status bar
 
 # previous window
@@ -78,3 +78,16 @@ bind -n C-a set status on \;\
 #Ensure status is on when we lose focus
 set-hook -g client-focus-out 'set -g status on'
 bind-key -n F3 run-shell 'tmux set status'
+bind-key "T" run-shell "sesh connect \"$(
+	sesh list | fzf-tmux -p 55%,60% \
+		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
+		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+		--bind 'tab:down,btab:up' \
+		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
+		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
+		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
+		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
+)\""
+
