--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,7 +67,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @thumbs-key F
 set -g @plugin 'sainnhe/tmux-fzf'
 # set -g @plugin 'fcsonline/tmux-thumbs'
-run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+# run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
 run '~/.tmux/plugins/tpm/tpm'
